--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -5,6 +5,10 @@
         <span itemprop="title">Home</span>
       </a> › 
     <span itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
+      <a href="{{ domain }}{{ link.url }}" itemprop="url">
+        <span itemprop="title">Portfolio</span>
+      </a> › 
+    <span itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
       <a href="{{ site.url }}/{{ page.categories | first }}/" itemprop="url">
         <span itemprop="title">{{ page.categories | first | replace: '-',' ' | capitalize }}</span>
       </a>
