--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,5 +51,6 @@
       Built with Jekyll using <a href="http://github.com/muan/scribble" class="link silver hover-blue pv1">Scribble</a>.
       <img src="{{ site.url }}/images/scribble2.png" alt="scribble" class="mt4 db center" />
     </footer>
+    {% include analytics.html %}
   </body>
 </html>
